--- a/templates/index.html
+++ b/templates/index.html
@@ -54,6 +54,7 @@
         <div v-if="showMenu" class="side-menu-overlay" @click.self="toggleMenu">
             <div class="side-menu">
                 <button class="menu-btn" @click="backupToCSV">CSVバックアップ</button>
+                <button class="menu-btn" @click="downloadLog">ログファイルダウンロード</button>
                 <button class="menu-btn" @click="showGraphModal">残高推移グラフ表示</button>
                 <button class="menu-btn" @click="openRatioModal">収支比率グラフ</button>
                 <button class="menu-btn" @click="openItemizedModal">項目別収支グラフ</button>
