--- a/templates/index.html
+++ b/templates/index.html
@@ -58,7 +58,7 @@
                 <button class="menu-btn" @click="showGraphModal">残高推移グラフ表示</button>
                 <button class="menu-btn" @click="openRatioModal">収支比率グラフ</button>
                 <button class="menu-btn" @click="openItemizedModal">項目別収支グラフ</button>
-                <!-- 必要に応じて他のメニューも追加可能 -->
+                <button class="menu-btn logout-btn" @click="logout">ログアウト</button>
             </div>
         </div>
 
